# rcb

./: .gitignore  .gitmodules  CMakeLists.txt  meson.build  readme.md
include/matrix/: matrix_client.h
include/matrix/models/: login_response.h  messages.h
include/reddit/: reddit.h
include/utils/: base64.h  http.h  ini_utils.h  rb_tree.h  safe_func.h  test.h  toml.h  win_utils.h
scripts/: copy_dll.py
src/: http.c  http.h  ini_utils.c  main.c  matrix_client.c  matrix_client.h  test.h
src/cli/: cli.c  hmap.c  hmap.h
src/matrix/: matrix_client.c  matrix_client.h
src/matrix/models/: login_response.c  login_response.h  messages.c  messages.h  printmessage.c
src/models/matrix/: messages.c  messages.h
src/reddit/: base64.c  base64.h  reddit.c  reddit.h
src/utils/: base64.c  http.c  http.h  ini_utils.c  ini_utils.h  safe_func.c  test.h
tools/: qb.ps1  qb.sh
